[package]
name = "openlimitsjava"
version = "0.1.0"
authors = ["kjr <mig@jankjr.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "openlimits_java"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
chrono = { version = "0.4.11" }
futures-util = "0.3"
jni = "0.18.0"
rust_decimal = "1.7.0"
thiserror = "1.0.22"
openlimits = { git = "https://github.com/nash-io/openlimits", branch = "fix-deps-for-wrappers" }